--- a/gtd-gnome.glade
+++ b/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sat Nov  8 22:18:57 2008 -->
+<!--Generated with glade3 3.4.5 on Sat Nov  8 22:53:37 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -234,7 +234,7 @@
     <property name="title" translatable="yes">Task</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="default_width">316</property>
-    <property name="default_height">421</property>
+    <property name="default_height">321</property>
     <child>
       <widget class="GtkVBox" id="vbox4">
         <property name="visible">True</property>
@@ -247,6 +247,7 @@
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Mark as done</property>
                 <property name="stock_id">gtk-apply</property>
+                <signal name="clicked" handler="mark_as_done_clicked"/>
               </widget>
               <packing>
                 <property name="homogeneous">True</property>
@@ -257,6 +258,7 @@
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Delete</property>
                 <property name="stock_id">gtk-delete</property>
+                <signal name="clicked" handler="delete_clicked"/>
               </widget>
               <packing>
                 <property name="homogeneous">True</property>
