--- a/gtd-gnome.glade
+++ b/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Nov  9 22:00:09 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Nov  9 22:26:55 2008 -->
 <glade-interface>
   <requires lib="gnome"/>
   <widget class="GtkWindow" id="MainWindow">
@@ -440,13 +440,16 @@ Are you sure you to want delete this task ?</property>
     </child>
   </widget>
   <widget class="GtkWindow" id="calendar">
+    <property name="events">GDK_STRUCTURE_MASK | GDK_PROXIMITY_OUT_MASK</property>
     <property name="type">GTK_WINDOW_POPUP</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
-    <property name="window_position">GTK_WIN_POS_MOUSE</property>
+    <property name="destroy_with_parent">True</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_UTILITY</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
+    <property name="accept_focus">False</property>
+    <property name="transient_for">TaskEditor</property>
     <child>
       <widget class="GtkVBox" id="vbox5">
         <property name="visible">True</property>
@@ -457,6 +460,7 @@ Are you sure you to want delete this task ?</property>
             <property name="year">2008</property>
             <property name="month">10</property>
             <property name="day">9</property>
+            <signal name="day_selected_double_click" handler="on_dayselected_double"/>
             <signal name="day_selected" handler="on_dayselected"/>
           </widget>
         </child>
