--- a/gtd-gnome.glade
+++ b/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Nov  9 22:26:55 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Nov  9 23:51:29 2008 -->
 <glade-interface>
   <requires lib="gnome"/>
   <widget class="GtkWindow" id="MainWindow">
@@ -445,11 +445,11 @@ Are you sure you to want delete this task ?</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="destroy_with_parent">True</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_UTILITY</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DROPDOWN_MENU</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
-    <property name="accept_focus">False</property>
     <property name="transient_for">TaskEditor</property>
+    <signal name="leave_notify_event" handler="on_focus_out"/>
     <child>
       <widget class="GtkVBox" id="vbox5">
         <property name="visible">True</property>
