--- a/gtd-gnome.glade
+++ b/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Nov 10 23:51:40 2008 -->
+<!--Generated with glade3 3.4.5 on Tue Nov 11 15:19:49 2008 -->
 <glade-interface>
   <requires lib="gnome"/>
   <widget class="GtkWindow" id="MainWindow">
@@ -244,7 +244,7 @@
   </widget>
   <widget class="GtkWindow" id="TaskEditor">
     <property name="title" translatable="yes">Task</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
+    <property name="window_position">GTK_WIN_POS_CENTER_ALWAYS</property>
     <property name="default_width">316</property>
     <property name="default_height">321</property>
     <child>
@@ -280,25 +280,36 @@
           </widget>
           <packing>
             <property name="expand">False</property>
+            <property name="position">1</property>
           </packing>
         </child>
         <child>
-          <widget class="GtkHBox" id="hbox1">
+          <widget class="GtkHBox" id="hbox3">
             <property name="visible">True</property>
             <child>
-              <widget class="GtkLabel" id="label2">
+              <widget class="GtkScrolledWindow" id="scrolledwindow3">
+                <property name="width_request">400</property>
+                <property name="height_request">300</property>
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Starting on</property>
+                <property name="can_focus">True</property>
+                <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                <child>
+                  <widget class="GtkTextView" id="textview">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="has_focus">True</property>
+                    <property name="resize_mode">GTK_RESIZE_IMMEDIATE</property>
+                    <property name="wrap_mode">GTK_WRAP_WORD</property>
+                    <property name="left_margin">5</property>
+                    <property name="right_margin">5</property>
+                  </widget>
+                </child>
               </widget>
-              <packing>
-                <property name="expand">False</property>
-                <property name="padding">10</property>
-              </packing>
             </child>
             <child>
-              <widget class="GnomeDateEdit" id="start_date">
+              <widget class="GtkVSeparator" id="vseparator1">
                 <property name="visible">True</property>
-                <property name="dateedit_flags"></property>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -306,43 +317,25 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkLabel" id="label3">
+              <widget class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Due for</property>
-              </widget>
-              <packing>
-                <property name="expand">False</property>
-                <property name="padding">10</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkHBox" id="hbox2">
-                <property name="visible">True</property>
+                <property name="border_width">2</property>
                 <child>
-                  <widget class="GtkEntry" id="duedate_entry">
+                  <widget class="GtkLabel" id="label2">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="width_chars">10</property>
+                    <property name="xalign">0</property>
+                    <property name="label" translatable="yes">&lt;span weight="bold"&gt;Starting on&lt;/span&gt;</property>
+                    <property name="use_markup">True</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">False</property>
+                    <property name="padding">10</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkButton" id="button1">
+                  <widget class="GnomeDateEdit" id="start_date">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="response_id">0</property>
-                    <signal name="clicked" handler="on_duedate_pressed"/>
-                    <child>
-                      <widget class="GtkArrow" id="arrow1">
-                        <property name="visible">True</property>
-                        <property name="arrow_type">GTK_ARROW_DOWN</property>
-                      </widget>
-                    </child>
+                    <property name="dateedit_flags"></property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -350,44 +343,111 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkLabel" id="dayleft">
+                  <widget class="GtkLabel" id="label3">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">X days left</property>
+                    <property name="xalign">0</property>
+                    <property name="label" translatable="yes">&lt;span weight="bold"&gt;Due for&lt;/span&gt;</property>
+                    <property name="use_markup">True</property>
                   </widget>
                   <packing>
+                    <property name="expand">False</property>
                     <property name="padding">10</property>
                     <property name="position">2</property>
                   </packing>
                 </child>
+                <child>
+                  <widget class="GtkHBox" id="hbox2">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkEntry" id="duedate_entry">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="width_chars">10</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkButton" id="button1">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="response_id">0</property>
+                        <signal name="clicked" handler="on_duedate_pressed"/>
+                        <child>
+                          <widget class="GtkArrow" id="arrow1">
+                            <property name="visible">True</property>
+                            <property name="arrow_type">GTK_ARROW_DOWN</property>
+                          </widget>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">3</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="dayleft">
+                    <property name="visible">True</property>
+                    <property name="xalign">1</property>
+                    <property name="use_markup">True</property>
+                    <property name="justify">GTK_JUSTIFY_RIGHT</property>
+                    <property name="width_chars">0</property>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="padding">10</property>
+                    <property name="position">4</property>
+                  </packing>
+                </child>
               </widget>
               <packing>
-                <property name="position">3</property>
+                <property name="expand">False</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </widget>
           <packing>
-            <property name="expand">False</property>
-            <property name="position">1</property>
+            <property name="position">2</property>
           </packing>
         </child>
         <child>
-          <widget class="GtkScrolledWindow" id="scrolledwindow3">
+          <widget class="GtkHSeparator" id="hseparator1">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">3</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkHButtonBox" id="hbuttonbox1">
+            <property name="visible">True</property>
+            <property name="border_width">3</property>
+            <property name="layout_style">GTK_BUTTONBOX_END</property>
             <child>
-              <widget class="GtkTextView" id="textview">
+              <widget class="GtkButton" id="close_btn">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="has_focus">True</property>
-                <property name="resize_mode">GTK_RESIZE_IMMEDIATE</property>
-                <property name="wrap_mode">GTK_WRAP_WORD</property>
+                <property name="receives_default">True</property>
+                <property name="label" translatable="yes">gtk-close</property>
+                <property name="use_stock">True</property>
+                <property name="response_id">0</property>
+                <signal name="clicked" handler="close_clicked"/>
               </widget>
             </child>
           </widget>
           <packing>
-            <property name="position">2</property>
+            <property name="expand">False</property>
+            <property name="pack_type">GTK_PACK_END</property>
           </packing>
         </child>
       </widget>
