--- a/gnome_frontend/gtd-gnome.glade
+++ b/gnome_frontend/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Jan  9 12:25:49 2009 -->
+<!--Generated with glade3 3.4.5 on Fri Jan  9 12:36:59 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -725,6 +725,63 @@ Are you sure you to want delete this task ?</property>
             <property name="stock">gtk-select-color</property>
           </widget>
         </child>
+      </widget>
+    </child>
+  </widget>
+  <widget class="GtkColorSelectionDialog" id="ColorChooser">
+    <property name="border_width">5</property>
+    <property name="title" translatable="yes">Sélecteur de couleurs</property>
+    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_MENU</property>
+    <signal name="response" handler="on_color_response"/>
+    <child internal-child="color_selection">
+      <widget class="GtkColorSelection" id="colorsel-color_selection1">
+        <property name="visible">True</property>
+        <property name="border_width">5</property>
+        <property name="current_color">#ffffffffffff</property>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </widget>
+    </child>
+    <child internal-child="help_button">
+      <widget class="GtkButton" id="colorsel-help_button1">
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="can_default">True</property>
+        <property name="receives_default">True</property>
+        <property name="label" translatable="yes">gtk-help</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+        <property name="response_id">0</property>
+      </widget>
+    </child>
+    <child internal-child="cancel_button">
+      <widget class="GtkButton" id="colorsel-cancel_button1">
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="can_default">True</property>
+        <property name="receives_default">True</property>
+        <property name="label" translatable="yes">gtk-cancel</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+        <property name="response_id">0</property>
+      </widget>
+    </child>
+    <child internal-child="ok_button">
+      <widget class="GtkButton" id="colorsel-ok_button1">
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="can_default">True</property>
+        <property name="has_default">True</property>
+        <property name="receives_default">True</property>
+        <property name="label" translatable="yes">gtk-ok</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+        <property name="response_id">0</property>
       </widget>
     </child>
   </widget>
