Ooops, mark as done has been disabled. Corrected

--- a/gnome_frontend/gtd-gnome.glade
+++ b/gnome_frontend/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sat Jan 17 21:19:47 2009 -->
+<!--Generated with glade3 3.4.5 on Mon Jan 19 09:29:40 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -212,6 +212,7 @@
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Mark as done</property>
                 <property name="icon">task_done.png</property>
+                <signal name="clicked" handler="on_mark_as_done"/>
               </widget>
               <packing>
                 <property name="homogeneous">True</property>
