--- a/taskbrowser/gtd-gnome.glade
+++ b/taskbrowser/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Jan 23 11:18:55 2009 -->
+<!--Generated with glade3 3.4.5 on Fri Jan 23 11:41:47 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -295,7 +295,7 @@
             <property name="position">200</property>
             <property name="position_set">True</property>
             <child>
-              <widget class="GtkVBox" id="vbox3">
+              <widget class="GtkVBox" id="sidebar">
                 <property name="visible">True</property>
                 <child>
                   <widget class="GtkTreeView" id="tag_tview">
@@ -348,7 +348,7 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkScrolledWindow" id="scrolledwindow5">
+                  <widget class="GtkScrolledWindow" id="closed_pane">
                     <property name="height_request">200</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
